syntax = "proto3";

package cosmos.belkyc.v1beta1;

import "cosmos/belkyc/v1beta1/kyc.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/belkyc/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateKyc (MsgCreateKyc) returns (MsgCreateKycResponse);
  rpc UpdateKyc (MsgUpdateKyc) returns (MsgUpdateKycResponse);
  rpc DeleteKyc (MsgDeleteKyc) returns (MsgDeleteKycResponse);
  rpc ChangeAdmin (MsgChangeAdmin) returns (MsgChangeAdminResponse);
}
message MsgCreateKyc {
  string creator = 1;
  string address = 2;
  bool   value   = 3;
}

message MsgCreateKycResponse {}

message MsgUpdateKyc {
  string creator = 1;
  string address = 2;
  bool   value   = 3;
}

message MsgUpdateKycResponse {}

message MsgDeleteKyc {
  string creator = 1;
  string address = 2;
}

message MsgDeleteKycResponse {}

message MsgChangeAdmin {
  string creator = 1;
  string address = 2;
}

message MsgChangeAdminResponse {
  string address = 1;
  string message = 2;
}